// =============================================================
// Oscar AMPAS — Winner Demographics
// Modelo ER — Disciplina: Banco de Dados — DCC/UFMG
// Visualizar em: https://dbdiagram.io
// =============================================================

Table vencedor {
  id_vencedor      integer     [primary key]
  nome             varchar     [not null]
  ano_nascimento   integer
  local_nascimento varchar     [note: 'texto livre: cidade, estado, país']
  id_etnia         integer     [not null, ref: > etnia.id_etnia]
  id_religiao      integer     [note: 'nullable — 62% ausente no dataset', ref: > religiao.id_religiao]
  id_orient        integer     [note: 'nullable — "Na" tratado como NULL', ref: > orientacao_sexual.id_orient]
}

Table filme {
  id_filme integer [primary key]
  titulo   varchar [not null]
}

Table categoria {
  id_categoria integer [primary key]
  nome         varchar [not null, note: 'Best Actress | Best Actor | Best Director | Best Supporting Actor | Best Supporting Actress']
}

Table edicao {
  id_edicao integer [primary key]
  ano       integer [not null, note: 'ano da cerimônia — 1927 a 2014']
}

Table premio {
  id_premio    integer [primary key]
  id_vencedor  integer [not null, ref: > vencedor.id_vencedor]
  id_filme     integer [not null, ref: > filme.id_filme]
  id_categoria integer [not null, ref: > categoria.id_categoria]
  id_edicao    integer [not null, ref: > edicao.id_edicao]
}

Table orientacao_sexual {
  id_orient   integer [primary key]
  nome_orient varchar [not null, unique]
}

Table religiao {
  id_religiao   integer [primary key]
  nome_religiao varchar [not null, unique]
}

Table etnia {
  id_etnia   integer [primary key]
  nome_etnia varchar [not null, unique]
}
